Make SVG non-focusable in IE11

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -52,7 +52,7 @@
         <p>This <q>Mute</q> toggle button uses an <code>a</code> element.</p>
         <a tabindex="0" role="button" id="toggle" aria-pressed="false">
           Mute
-          <svg aria-hidden="true">
+          <svg aria-hidden="true" focusable="false">
             <use xlink:href="images/mute.svg#icon-sound"></use>
           </svg>
         </a>
