--- a/examples/button/button_idl.html
+++ b/examples/button/button_idl.html
@@ -57,7 +57,7 @@
         <p>This <q>Mute</q> toggle button uses an <code>a</code> element.</p>
         <a tabindex="0" id="toggle">
           Mute
-          <svg aria-hidden="true">
+          <svg aria-hidden="true" focusable="false">
             <use xlink:href="images/mute.svg#icon-sound"></use>
           </svg>
         </a>
