Update "Role, Property, State, and Tabindex Attributes" table - list relevant lines of javascript

--- a/examples/button/button_idl.html
+++ b/examples/button/button_idl.html
@@ -110,6 +110,7 @@
             </td>
             <td>
               <ul>
+                <li>Set in javascript with <code>element.role = 'button';</code>.</li>
                 <li>Identifies the element as a <code>button</code> widget.</li>
                 <li>Accessible name for the button is defined by the text content of the element.</li>
               </ul>
@@ -136,6 +137,7 @@
             <td><code>a</code></td>
             <td>
               <ul>
+                <li>Set in javascript with <code>button.ariaPressed = 'false';</code>.</li>
                 <li>Identifies the button as a toggle button.</li>
                 <li>Indicates the toggle button is not pressed.</li>
               </ul>
@@ -147,6 +149,7 @@
             <td><code>a</code></td>
             <td>
               <ul>
+                <li>Set in javascript with <code>button.ariaPressed = 'true';</code>.</li>
                 <li>Identifies the button as a toggle button.</li>
                 <li>Indicates the toggle button is pressed.</li>
               </ul>
