--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -119,12 +119,12 @@
 
             <tbody>
               <tr>
-                <td class="dateCell"><button class="dateButton disabled" tabindex="-1"></button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">25</button></td>
                 <td class="dateCell"><button class="dateButton disabled" tabindex="-1">26</button></td>
                 <td class="dateCell"><button class="dateButton disabled" tabindex="-1">27</button></td>
                 <td class="dateCell"><button class="dateButton disabled" tabindex="-1">28</button></td>
                 <td class="dateCell"><button class="dateButton disabled" tabindex="-1">29</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>30</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">30</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">1</button></td>
               </tr>
               <tr>
@@ -142,7 +142,7 @@
                 <td class="dateCell"><button class="dateButton" tabindex="-1">11</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">12</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">13</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="0">14</button></td>
+                <td class="dateCell"><button class="dateButton">14</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">15</button></td>
               </tr>
               <tr>
@@ -166,11 +166,11 @@
               <tr>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">30</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">31</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>1</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>2</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>3</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>4</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>5</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">1</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">2</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">3</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">4</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">5</button></td>
               </tr>
             </tbody>
           </table>
@@ -347,7 +347,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="grid-shift=pageup">
+          <tr data-test-id="grid-shift-pageup">
             <th><kbd>Shift + Page Up</kbd></th>
             <td>
               <ul>
