Added draft warning to slider widget pattern

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2394,6 +2394,12 @@
           </li>
         </ul>
       </section>
+      <section>
+        <p class="warning">
+          This widget may not be have support gaps that can only be filled by the development of new technologies. Likewise, it may be poorly supported by certain browsers or assistive technologies. For information on that, please refer to the forthcoming ARIA-AT Project. Authors should fully  before using them for a production ready project 
+        </p>
+      </section>
+
     </section>
 
     <section class="widget" id="slidertwothumb">
