Added h4 to warning section

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2395,8 +2395,9 @@
         </ul>
       </section>
       <section>
+        <h4>Potential Support Gap</h4>
         <p class="warning">
-          This widget may not be have support gaps that can only be filled by the development of new technologies. Likewise, it may be poorly supported by certain browsers or assistive technologies. For information on that, please refer to the forthcoming ARIA-AT Project. Authors should fully  before using them for a production ready project 
+          This widget may not be have support gaps that can only be filled by the development of new technologies. Likewise, it may be poorly supported by certain browsers or assistive technologies. For information on that, please refer to the forthcoming ARIA-AT Project. Authors should fully  before using them for a production ready project
         </p>
       </section>
 
