moved warning, changed to note

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2344,7 +2344,9 @@
         A slider is an input where the user selects a value from within a given range.
         Sliders typically have a slider thumb that can be moved along a bar or track to change the value of the slider.
       </p>
-
+      <p class="note">
+      This widget may not be have support gaps that can only be filled by the development of new technologies. Likewise, it may be poorly supported by certain browsers or assistive technologies. For information on that, please refer to the forthcoming ARIA-AT Project. Authors should fully  before using them for a production ready project
+      </p>
       <section class="notoc">
         <h4>Examples</h4>
         <ul>
@@ -2394,13 +2396,6 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h4>Potential Support Gap</h4>
-        <p class="warning">
-          This widget may not be have support gaps that can only be filled by the development of new technologies. Likewise, it may be poorly supported by certain browsers or assistive technologies. For information on that, please refer to the forthcoming ARIA-AT Project. Authors should fully  before using them for a production ready project
-        </p>
-      </section>
-
     </section>
 
     <section class="widget" id="slidertwothumb">
