cleaned up warning

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2345,7 +2345,7 @@
         Sliders typically have a slider thumb that can be moved along a bar or track to change the value of the slider.
       </p>
       <p class="warning">
-      This widget may not be have support gaps that can only be filled by the development of new technologies. Likewise, it may be poorly supported by certain browsers or assistive technologies. For information on that, please refer to the forthcoming ARIA-AT Project. Authors should fully  before using them for a production ready project
+      This widget may have support gaps that can only be filled by the development of new technologies. Authors should fully test this widget before using it for a production ready project. Likewise, it may be poorly supported by certain browsers or assistive technologies. 
       </p>
       <section class="notoc">
         <h4>Examples</h4>
