Hard code ARIA 1.2 spec link since not a respec doc. (exception to normal practice of not link justifiable here)

--- a/examples/button/button_idl.html
+++ b/examples/button/button_idl.html
@@ -31,7 +31,7 @@
       The following command and toggle button examples demonstrate the <a href="../../#button">button design pattern.</a>
     </p>
     <p>
-      The JavaScript for the examples on this page uses the <a class="specref" href="#idl-interface">IDL Interface defined in ARIA 1.2</a>.
+      The JavaScript for the examples on this page uses the <a href="https://www.w3.org/TR/wai-aria-1.2/#idl-interface">IDL Interface defined in ARIA 1.2</a>.
       They are intended to be the simplest posible examples of using the IDL for ARIA Attribute Reflection, and as such, they are just for illustrative purposes.
       Specifically, the buttons' <code>role</code> and <code>ariaPressed</code> attributes are accessed using dot notation instead of <code>setAttribute()</code> and <code>getAttribute()</code>.
       In all other respects, these examples are identical to the <a href="button.html">Button Examples</a>.
