--- a/examples/button/button_idl.html
+++ b/examples/button/button_idl.html
@@ -28,12 +28,12 @@
   <main>
     <h1>Button Examples (IDL Version)</h1>
     <p>
-      The following command and toggle button examples demonstrate the <a href="../../#button">button design pattern.</a>
+      The following examples of the <a href="../../#button">button design pattern</a> demonstrate a new JavaScript syntax for coding ARIA attributes.
     </p>
     <p>
-      The JavaScript for the examples on this page uses the <a href="https://www.w3.org/TR/wai-aria-1.2/#idl-interface">IDL Interface defined in ARIA 1.2</a>.
-      They are intended to be the simplest posible examples of using the IDL for ARIA Attribute Reflection, and as such, they are just for illustrative purposes.
-      Specifically, the buttons' <code>role</code> and <code>ariaPressed</code> attributes are accessed using dot notation instead of <code>setAttribute()</code> and <code>getAttribute()</code>.
+      The JavaScript for the example buttons on this page uses the <a href="https://www.w3.org/TR/wai-aria-1.2/#idl-interface">IDL Interface defined in ARIA 1.2</a>.
+      The purpose of these examples is to illustrate how to use IDL for ARIA Attribute Reflection and provide a test case for browser and assistive technology interoperability.
+      Specifically, the <code>role</code> and <code>ariaPressed</code> attributes are accessed using dot notation instead of <code>setAttribute()</code> and <code>getAttribute()</code>.
       In all other respects, these examples are identical to the <a href="button.html">Button Examples</a>.
     </p>
 
