Remove named entities for quotes inside code tags -- not needed

--- a/examples/button/button_idl.html
+++ b/examples/button/button_idl.html
@@ -41,7 +41,7 @@
       <h2 id="ex_label">Example</h2>
 
       <p>
-        <strong>IMPORTANT:</strong> This example uses features of the draft ARIA 1.2 specification. As a draft specification, it is subject to change. Any support provided by browsers or assistive technologies is experimental.
+        <strong>IMPORTANT:</strong> This example uses features of the draft ARIA 1.2 specification. As a draft specification, it is subject to change. Support provided by browsers or assistive technologies is experimental.
       </p>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
 
@@ -114,7 +114,7 @@
           <tr data-test-id="button-tabindex">
             <td></td>
             <th scope="row">
-              <code>tabindex=&quot;0&quot;</code>
+              <code>tabindex="0"</code>
             </th>
             <td>
               <code>div</code>, <code>a</code>
@@ -128,7 +128,7 @@
           </tr>
           <tr data-test-id="button-aria-pressed">
             <td></td>
-            <th scope="row"><code>aria-pressed=&quot;false&quot;</code></th>
+            <th scope="row"><code>aria-pressed="false"</code></th>
             <td><code>a</code></td>
             <td>
               <ul>
@@ -140,7 +140,7 @@
           </tr>
           <tr data-test-id="button-aria-pressed">
             <td></td>
-            <th scope="row"><code>aria-pressed=&quot;true&quot;</code></th>
+            <th scope="row"><code>aria-pressed="true"</code></th>
             <td><code>a</code></td>
             <td>
               <ul>
