--- a/examples/button/button_idl.html
+++ b/examples/button/button_idl.html
@@ -150,6 +150,12 @@
               </ul>
             </td>
           </tr>
+          <tr data-test-id="svg-aria-hidden">
+            <td></td>
+            <th scope="row"><code>aria-hidden="true"</code></th>
+            <td><code>svg</code></td>
+            <td>Excludes SVG from accessible name calculation for the button.</td>
+          </tr>
         </tbody>
       </table>
     </section>
