--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -1,56 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Meter Blueprint</title>
-    <!-- CSS and JS for this example. -->
-    <link rel="stylesheet" href="css/meter.css">
-    <script>
-      /** @type {!Element} Meter element. */
-      let meterEl;
+<head>
+<title>Meter Example | WAI-ARIA Authoring Practices 1.1</title>
+<!--  Core js and css shared by all examples; do not modify when using this template. -->
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
-      /** @type {!Element} Element visually filling the meter. */
-      let visualFillEl;
+<script src="../js/examples.js" type="text/javascript"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
-      /** @type {number} Minimum value. */
-      let minUsage;
+<!-- CSS and JS for this example. -->
+<link rel="stylesheet" href="css/meter.css">
+<script src="meter.js" type="text/javascript"></script>
 
-      /** @type {number} Maximum value. */
-      let maxUsage;
+</head>
+<body>
+<nav aria-label="Related Links" class="feedback">
+  <ul>
+    <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+    <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+    <li><a href="https://github.com/w3c/aria-practices/projects/10">Related Issues</a></li>
+    <li><a href="../../../#meter">Design Pattern</a></li>
+  </ul>
+</nav>
+<main>
+  <h1> Meter Example</h1>
+  The following meter examples demonstrate the <a href="">meter design pattern</a>.
 
-      /** @type {number} Current value. */
-      let usage;
+  <section>
+    <h2 id="ex_label">Example</h2>
 
-      /** Set the value randomly between the minimum and maximum. */
-      function randomizeUsage() {
-        const range = maxUsage - minUsage;
-        usage = Math.floor((Math.random() * range) + minUsage);
-        meterEl.setAttribute('aria-valuenow', usage);
-        render();
-      }
+    <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
 
-      function render() {
-        const asPercentage = (100 * usage) / (maxUsage - minUsage);
-        visualFillEl.style.width = asPercentage + '%';
-      }
-
-      function init() {
-        meterEl = document.querySelector('[role=meter]');
-        visualFillEl = document.getElementById('fill');
-        minUsage = Number(meterEl.getAttribute('aria-valuemin'));
-        maxUsage = Number(meterEl.getAttribute('aria-valuemax'));
-        usage = Number(meterEl.getAttribute('aria-valuenow'));
-        render();
-        setInterval(randomizeUsage, 5000);
-      }
-
-      window.addEventListener('load', init, false);
-    </script>
-  </head>
-  <body>
-    <p>This meter changes its value randomly every 5 seconds.</p>
-    <div role="meter" aria-valuenow="90" aria-valuemin="0" aria-valuemax="128"
-         aria-label="Disk Usage">
-      <div id="fill" role="presentation"></div>
+    <div id="example">
+      <p>This meter changes its value randomly every 5 seconds.</p>
+      <div role="meter" tabindex="0" aria-valuenow="90" aria-valuemin="0" aria-valuemax="128"
+        aria-label="Disk Usage">
+        <div id="fill" role="presentation"></div>
+      </div>
     </div>
-  </body>
+    <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+  </section>
+  <section>
+      <h2 id="kbd_label">Keyboard Support</h2>
+
+      <table aria-labelledby="kbd_label" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-test-id="key-home">
+            <th><kbd>Home</kbd></th>
+            <td>Sets meter to its minimum value?
+              </td>
+          </tr>
+          <tr data-test-id="key-end">
+            <th><kbd>End</kbd></th>
+            <td>Sets meter to its maximum value?</td>
+          </tr>
+        </tbody>
+      </table>
+  </section>
+
+  <section>
+    <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
+    <table aria-labelledby="rps_label" class="data attributes">
+      <thead>
+        <tr>
+          <th scope="col">Role</th>
+          <th scope="col">Attribute</th>
+          <th scope="col">Element</th>
+          <th scope="col">Usage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr data-test-id="meter-role">
+          <th scope="row"><code>meter</code></th>
+          <td></td>
+          <td>
+            <code>div</code>
+          </td>
+          <td>
+            <ul>
+              <li>Identifies the element as a <code>meter</code> widget.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr data-test-id="meter-tabindex">
+            <td></td>
+            <th scope="row">
+              <code>tabindex=&quot;0&quot;</code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>Includes the element in the tab sequence.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="meter-aria-valuemin">
+              <td></td>
+              <th scope="row"><code>aria-valuemin="NUMBER"</code></th>
+              <td><code>div</code></td>
+              <td>
+                <ul>
+                  <li>Specifies a numeric value that is the minimum value the meter can have.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr data-test-id="meter-aria-vlauemax">
+                <td></td>
+                <th scope="row"><code>aria-valuemax="NUMBER"</code></th>
+                <td><code>div</code></td>
+                <td>
+                  <ul>
+                    <li>Specifies a numeric value that is the maximum value the meter can have.</li>
+                  </ul>
+                </td>
+            </tr>
+            <tr data-test-id="meter-aria-valuenow">
+                <td></td>
+                <th scope="row"><code>aria-valuenow="NUMBER"</code></th>
+                <td><code>div</code></td>
+                <td>
+                  <ul>
+                    <li>A numeric value that is the current value of the meter</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr data-test-id="meter-aria-label">
+                  <td></td>
+                  <th scope="row"><code>aria-label</code></th>
+                  <td><code>div</code></td>
+                  <td>
+                    <ul>
+                      <li>Identifies the accessible name for <code>meter</code> widget.</li>
+                    </ul>
+                  </td>
+              </tr>
+              <tr data-test-id="presentation-role">
+                <th scope="row"><code>presentation</code></th>
+                <td></td>
+                <td>
+                  <code>div</code>
+                </td>
+                <td>
+                  <ul>
+                    <li>Identifies that the visual indicator of meter value is being used only for visual presentation.</li>
+
+                  </ul>
+                </td>
+              </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section>
+    <h2>Javascript and CSS Source Code</h2>
+
+    <ul>
+      <li>
+        CSS:
+        <a href="css/meter.css" type="text/css">meter.css</a>
+      </li>
+      <li>
+        Javascript:
+        <a href="js/meter.js" type="text/javascript">meter.js</a>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 id="sc1_label">HTML Source Code</h2>
+
+    <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
+
+    <pre><code id="source1"></code></pre>
+
+    <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
+
+    <script>
+      sourceCode.add('source1', 'example');
+      sourceCode.make();
+    </script>
+  </section>
+</main>
+
+  <nav>
+      <a href="../../#meter">Meter Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+  </nav>
+</body>
 </html>
