--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -38,7 +38,7 @@
       <p>This meter changes its value randomly every 5 seconds.</p>
       <div role="meter" tabindex="0" aria-valuenow="90" aria-valuemin="0" aria-valuemax="128"
         aria-label="Disk Usage">
-        <div id="fill" role="presentation"></div>
+        <div id="fill"></div>
       </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
@@ -46,25 +46,7 @@
   <section>
       <h2 id="kbd_label">Keyboard Support</h2>
 
-      <table aria-labelledby="kbd_label" class="def">
-        <thead>
-          <tr>
-            <th>Key</th>
-            <th>Function</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr data-test-id="key-home">
-            <th><kbd>Home</kbd></th>
-            <td>Sets meter to its minimum value?
-              </td>
-          </tr>
-          <tr data-test-id="key-end">
-            <th><kbd>End</kbd></th>
-            <td>Sets meter to its maximum value?</td>
-          </tr>
-        </tbody>
-      </table>
+      <p>It would not have any keyboard support since this is system generated information.</p>
   </section>
 
   <section>
@@ -144,19 +126,6 @@
                       <li>Identifies the accessible name for <code>meter</code> widget.</li>
                     </ul>
                   </td>
-              </tr>
-              <tr data-test-id="presentation-role">
-                <th scope="row"><code>presentation</code></th>
-                <td></td>
-                <td>
-                  <code>div</code>
-                </td>
-                <td>
-                  <ul>
-                    <li>Identifies that the visual indicator of meter value is being used only for visual presentation.</li>
-
-                  </ul>
-                </td>
               </tr>
       </tbody>
     </table>
