--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -37,7 +37,7 @@
     <div id="example">
       <p>This meter changes its value randomly every 5 seconds.</p>
       <div role="meter" tabindex="0" aria-valuenow="90" aria-valuemin="0" aria-valuemax="128"
-        aria-label="Disk Usage">
+        aria-label="CPU Usage">
         <div id="fill"></div>
       </div>
     </div>
