removed tab index and updated keyboard interaction info

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -46,7 +46,7 @@
   <section>
       <h2 id="kbd_label">Keyboard Support</h2>
 
-      <p>It would not have any keyboard support since this is system generated information.</p>
+      <p>No keyboard interaction needed.</p>
   </section>
 
   <section>
@@ -73,20 +73,6 @@
             </ul>
           </td>
         </tr>
-        <tr data-test-id="meter-tabindex">
-            <td></td>
-            <th scope="row">
-              <code>tabindex=&quot;0&quot;</code>
-            </th>
-            <td>
-              <code>div</code>
-            </td>
-            <td>
-              <ul>
-                <li>Includes the element in the tab sequence.</li>
-              </ul>
-            </td>
-          </tr>
           <tr data-test-id="meter-aria-valuemin">
               <td></td>
               <th scope="row"><code>aria-valuemin="NUMBER"</code></th>
