changed the word, example from plural to single

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -27,7 +27,7 @@
 </nav>
 <main>
   <h1> Meter Example</h1>
-  The following meter examples demonstrate the <a href="">meter design pattern</a>.
+  The following meter example demonstrates the <a href="">meter design pattern</a>.
 
   <section>
     <h2 id="ex_label">Example</h2>
