made changes based on 10/1 feedback, Zoe's suggestion

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2345,7 +2345,7 @@
         Sliders typically have a slider thumb that can be moved along a bar or track to change the value of the slider.
       </p>
       <p class="warning">
-      Widgets implemented using this pattern may not currently be fully supported by assisitive technologies operated based on touch interaction. Authors should fully test this widget before using it for a production ready project.
+      Interaction with widgets implemented using this pattern may not be fully supported by touch based assistive technologies. Authors should fully test this widget before using it for a production ready project.
       </p>
       <section class="notoc">
         <h4>Examples</h4>
