--- a/examples/tabs/tabs-1/tabs.html
+++ b/examples/tabs/tabs-1/tabs.html
@@ -22,7 +22,7 @@
         <li><a href="https://github.com/w3c/aria-practices/projects/11">Related Issues</a></li>
         <li><a href="../../../#tabpanel">Design Pattern</a></li>
       </ul>
-    </nav>  
+    </nav>
     <main>
       <h1>Example of Tabs with Automatic Activation</h1>
       <p>
@@ -51,11 +51,11 @@
               <p>Nils Frahm is a German musician, composer and record producer based in Berlin. He is known for combining classical and electronic music and for an unconventional approach to the piano in which he mixes a grand piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and Moog Taurus.</p>
             </div>
 
-            <div tabindex="0" role="tabpanel" id="agnes-tab" aria-labelledby="agnes" hidden>
+            <div tabindex="0" role="tabpanel" id="agnes-tab" aria-labelledby="agnes" class="is-hidden">
               <p>Agnes Caroline Thaarup Obel is a Danish singer/songwriter. Her first album, Philharmonics, was released by PIAS Recordings on 4 October 2010 in Europe. Philharmonics was certified gold in June 2011 by the Belgian Entertainment Association (BEA) for sales of 10,000 Copies.</p>
             </div>
 
-            <div tabindex="0" role="tabpanel" id="complexcomplex" aria-labelledby="complex" hidden>
+            <div tabindex="0" role="tabpanel" id="complexcomplex" aria-labelledby="complex" class="is-hidden">
               <p>Fear of complicated buildings:</p>
               <p>A complex complex complex.</p>
             </div>
