Editorial: add 'the' (issue #979)

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -110,7 +110,7 @@
                   <td><code>div</code></td>
                   <td>
                     <ul>
-                      <li>Identifies the accessible name for <code>meter</code> widget.</li>
+                      <li>Identifies the accessible name for the <code>meter</code> widget.</li>
                     </ul>
                   </td>
               </tr>
