Fix design pattern href in banner nav

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -22,7 +22,7 @@
     <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
     <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
     <li><a href="https://github.com/w3c/aria-practices/projects/10">Related Issues</a></li>
-    <li><a href="../../../#meter">Design Pattern</a></li>
+    <li><a href="../../#meter">Design Pattern</a></li>
   </ul>
 </nav>
 <main>
