Add missing p tags and minor revision wording of intro

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -27,7 +27,7 @@
 </nav>
 <main>
   <h1> Meter Example</h1>
-  The following meter example demonstrates the <a href="../../#meter">meter design pattern</a>.
+  <p>The following example of a CPU meter demonstrates the <a href="../../#meter">meter design pattern</a>.</p>
 
   <section>
     <h2 id="ex_label">Example</h2>
