Revise wording of instructions

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -31,11 +31,10 @@
 
   <section>
     <h2 id="ex_label">Example</h2>
-
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
 
     <div id="example">
-      <p>This meter changes its value randomly every 5 seconds, with an option to pause changes.</p>
+      <p>The value of this meter changes every 5 seconds. Use the pause button to stop changes.</p>
       <h3 id="cpu_usage_label">Central Processing Unit (CPU) Usage</h3>
       <p>
         <button type="button" class="play-meters">Pause Updates</button>
@@ -49,9 +48,8 @@
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
   <section>
-      <h2 id="kbd_label">Keyboard Support</h2>
-
-      <p>No keyboard interaction needed.</p>
+    <h2 id="kbd_label">Keyboard Support</h2>
+    <p>Not applicable.</p>
   </section>
 
   <section>
