Editorial revisions to state and props table

--- a/examples/meter/meter.html
+++ b/examples/meter/meter.html
@@ -72,7 +72,7 @@
           </td>
           <td>
             <ul>
-              <li>Identifies the element as a <code>meter</code> widget.</li>
+              <li>Identifies the element as a <code>meter</code>.</li>
             </ul>
           </td>
         </tr>
@@ -80,41 +80,25 @@
           <td></td>
           <th scope="row"><code>aria-valuemin="NUMBER"</code></th>
           <td><code>div</code></td>
-          <td>
-            <ul>
-              <li>Specifies a numeric value that is the minimum value the meter can have.</li>
-            </ul>
-          </td>
+          <td>Specifies the minimum value the meter can have.</td>
         </tr>
         <tr data-test-id="meter-aria-valuemax">
           <td></td>
           <th scope="row"><code>aria-valuemax="NUMBER"</code></th>
           <td><code>div</code></td>
-          <td>
-            <ul>
-              <li>Specifies a numeric value that is the maximum value the meter can have.</li>
-            </ul>
-          </td>
+          <td>Specifies the maximum value the meter can have.</td>
         </tr>
         <tr data-test-id="meter-aria-valuenow">
           <td></td>
           <th scope="row"><code>aria-valuenow="NUMBER"</code></th>
           <td><code>div</code></td>
-          <td>
-            <ul>
-              <li>A numeric value that is the current value of the meter</li>
-            </ul>
-          </td>
+          <td>Specifies the current value of the meter.</td>
         </tr>
         <tr data-test-id="meter-aria-labelledby">
           <td></td>
           <th scope="row"><code>aria-labelledby</code></th>
           <td><code>div</code></td>
-          <td>
-            <ul>
-              <li>Identifies the accessible name for the <code>meter</code> widget.</li>
-            </ul>
-          </td>
+          <td>Identifies the element that provides the accessible name of the <code>meter</code>.</td>
         </tr>
       </tbody>
     </table>
