typo: mimimum -> minimum

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -191,7 +191,7 @@
           </tr>
           <tr data-test-id="spinbutton-home">
             <th><kbd>Home</kbd></th>
-            <td>Decreases to mimimum value.</td>
+            <td>Decreases to minimum value.</td>
           </tr>
           <tr data-test-id="spinbutton-end">
             <th><kbd>End</kbd></th>
