Add link to example page

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2168,10 +2168,10 @@
         For that, use the <a href="#progressbar" class="role-reference">progressbar</a> role instead.
       </p>
 
-      <!-- <section class="notoc">
+      <section class="notoc">
         <h4>Example</h4>
-        <p>TODO: add example link</p>
-      </section> -->
+        <p><a href="examples/meter/meter.html">Meter Example</a></p>
+      </section>
 
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
